<resources>

    <string name="app_name">SimpleLoginScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_ok">Login</string>
    <string name="button_cancel">Cancel</string>
    <string name="username_label">Username:</string>
    <string name="passwordLabel">Password:</string>
    <string name="login_label">Please login</string>

</resources>