<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    
    <LinearLayout
        	android:id="@+id/header" 
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content" 
    		android:orientation="horizontal"
    		android:background="#339900"
    		android:gravity="center">

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    
        <LinearLayout 
            android:id="@+id/container" 
            android:layout_width="fill_parent"
    		android:layout_height="0dp" 
    		android:orientation="vertical"
    		android:background="@drawable/background"
    		android:gravity="center"
    		android:layout_weight="1">

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/username_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/passwordLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:inputType="textPassword" />

    </LinearLayout>
    
            <RelativeLayout
                android:id="@+id/footer" 
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content" 
    		android:orientation="horizontal"
    		android:background="#339900">

                
                <LinearLayout 
                    android:id="@+id/buttonGroup" 
            		android:layout_width="wrap_content"
    				android:layout_height="wrap_content" 
    				android:orientation="horizontal"
    				android:layout_centerVertical="true" 
    				android:layout_centerHorizontal="true" >
                	<Button
	                    android:id="@+id/buttonOk"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/button_ok"
	                    android:layout_centerVertical="true"
	                    android:onClick="onClick" />

                	<Button
	                    android:id="@+id/buttonCancel"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/button_cancel"
	                    android:layout_toRightOf="@+id/buttonOk" 
	                    android:layout_centerVertical="true"
	                    android:onClick="onClick"/>

                	</LinearLayout>
                
                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" 
                    android:visibility="gone"/>

    </RelativeLayout>

    
</LinearLayout>
